<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollableTableLayout">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:id="@+id/tableRow" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/handNum"
            android:id="@+id/handNumTextView"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultText"
            android:id="@+id/resultsTextView"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:layout_weight="1" />
    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dealerLabelLinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dealerName"
            android:id="@+id/dealerNameTextView"
            android:textSize="24sp"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:layout_column="1"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/handCount"
            android:id="@+id/dealerHandTextView"
            android:layout_column="2"
            android:textColor="#ffffffff"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:id="@+id/dealerCardTableRow">

    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerLabelLinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/playerName"
            android:id="@+id/playerNameTextView"
            android:textSize="24dp"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:layout_column="1"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/handCount"
            android:id="@+id/playerHandTextView"
            android:layout_column="2"
            android:textColor="#ffffffff"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:id="@+id/playerCardTableRow">

    </TableRow>
</TableLayout>